Css tweak to fix ugly looking word wrap/highlight issue

--- a/src/components/document/citation/citation.scss
+++ b/src/components/document/citation/citation.scss
@@ -1,6 +1,7 @@
 .np-citation {
-  background-color: rgba(234, 228, 145, .3);
-  padding: 5px;
+  background-color: rgba(183, 175, 62, 0.3);
+  padding: 5px 10px;
+  display: inline-block;
 
   h4 {
     margin: 0 0 10px;
